Fixed scrolling bug

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             var options = {
                 $FillMode: 2,                                       //[Optional] The way to fill image in slide, 0 stretch, 1 contain (keep aspect ratio and put all inside slide), 2 cover (keep aspect ratio and cover whole slide), 4 actuall size, default value is 0
                 $AutoPlay: true,                                    //[Optional] Whether to auto play, to enable slideshow, this option must be set to true, default value is false
-                $AutoPlayInterval: 4000,                            //[Optional] Interval (in milliseconds) to go for next slide since the previous stopped if the slider is auto playing, default value is 3000
+                $AutoPlayInterval: 2500,                            //[Optional] Interval (in milliseconds) to go for next slide since the previous stopped if the slider is auto playing, default value is 3000
                 $PauseOnHover: 1,                                   //[Optional] Whether to pause when mouse over if a slider is auto playing, 0 no pause, 1 pause for desktop, 2 pause for touch device, 3 pause for desktop and touch device, default value is 1
 
                 $ArrowKeyNavigation: true,   			            //[Optional] Allows keyboard (arrow key) navigation or not, default value is false
@@ -127,7 +127,7 @@
 	<body>
 		<div class="top-bar" id="top">
 			<div class="container"></div>
-			<div class="top-menu">
+			<div class="top-menu stuckMenu">
 				<div class="container">
 					<!-- Static navbar -->
 					<div class="navbar navbar-default" role="navigation">
@@ -171,7 +171,7 @@
 			</div>
 
 	<div id="slider1_container" style="position: relative; margin: 0 auto;
-        top: 0px; left: 0px; width: 1920px; height: 550px; overflow: hidden;">
+        top: 252px; left: 0px; width: 1920px; height: 550px; overflow: hidden;">
         <!-- Loading Screen -->
         <div u="loading" style="position: absolute; top: 0px; left: 0px;">
             <div style="filter: alpha(opacity=70); opacity: 0.7; position: absolute; display: block;
