Changed the About Us section - Now Welcome Section

--- a/index.html
+++ b/index.html
@@ -145,13 +145,36 @@
 			</div>
 
 			<!-- /.welcome -->
-			<div class="welcome" id="welcome">
+			<div class="welcome" id="about">
 				<div class="container">
 					<div class="slogan text-center">
 						<span class="txt_darkgrey">Welcome to </span><span class="txt_orange">Seattle AV Source</span>
 						<p class="txt_slogan">
 							<i>Seattle's premier supplier of projection, lighting, video, audio, staging and drapery</i>
 						</p>
+						<div id="about" class="content-section">
+							<div class="container-fluid">
+								<div class="row">
+									<div class="col-md-12 col-sm-6">
+										<div class="service-item">
+											<p>
+												Seattle Audio-Video Source is a cooperation of Data/ Video Projection, Lighting, 
+												Sound and AV Labor Specialists in the Audio-Video Industry. Doug Kennelly went 
+												in business for himself April 15th, 1980 and throughout the years, Doug Kennelly 
+												has worked with many business owners and the idea of creating this co-operative 
+												was established to provide our clients with the best in Services, Equipment 
+												and discounted AV Rental Pricing.
+											</p>
+										</div>
+										<!-- /.service-item -->
+									</div>
+
+									<!-- /.col-md-3 -->
+								</div>
+								<!-- /.row -->
+							</div>
+							<!-- /.container -->
+						</div>
 
 						<!-- /.services -->
 						<div id="services" class="content-section">
@@ -197,61 +220,6 @@
 											<h2>Staging / Drapery</h2>
 											<p>
 												We have staging, drapery and pipe (stands) to make your event look clean, polished and professional. Dress up your auction tables with lighting and drapery for an unforgettable look and feel.
-											</p>
-										</div>
-										<!-- /.service-item -->
-									</div>
-									<!-- /.col-md-3 -->
-								</div>
-								<!-- /.row -->
-							</div>
-							<!-- /.container -->
-						</div>
-						<!-- /#services -->
-					</div>
-				</div>
-				<div class="clearfix"></div>
-			</div>
-
-			<div id="about" class="container">
-				<div class="row">
-					<div class="line-header head_contact">
-						<div class="text-center">
-							<hr class="team_hr team_hr_left hr_gray"/>
-							<span class="txt_darkgrey">ABOUT US</span>
-							<hr class="team_hr team_hr_right hr_gray"/>
-						</div>
-						<div id="about" class="content-section">
-							<div class="container-fluid">
-								<div class="row">
-									<div class="col-md-4 col-sm-6">
-										<div class="service-item">
-											<span class="service-icon first"></span>
-											<h3>Who we are</h3>
-											<p>
-												SeattleAVS is a leading supplier of premium equipment for conferences, conventions, seminars, educational settings and houses of worship.
-											</p>
-										</div>
-										<!-- /.service-item -->
-									</div>
-									<!-- /.col-md-3 -->
-									<div class="col-md-4 col-sm-6">
-										<div class="service-item">
-											<span class="service-icon second"></span>
-											<h3>Mission</h3>
-											<p>
-												We are dedicated to providing you with exceptional AV equipment rental and sales experiences.
-											</p>
-										</div>
-										<!-- /.service-item -->
-									</div>
-									<!-- /.col-md-3 -->
-									<div class="col-md-4 col-sm-6">
-										<div class="service-item">
-											<span class="service-icon third"></span>
-											<h3>History</h3>
-											<p>
-												Sprint is <a rel="nofollow" href="http://www.templatemo.com">free responsive template</a> using HTML5 CSS3 based on Bootstrap framework. Feel free to download, edit and use it for your websites.
 											</p>
 										</div>
 										<!-- /.service-item -->
@@ -650,7 +618,8 @@
 							<div class="clearfix"></div>
 							<div class="text-center">
 								<div class=service-item-header>
-									Staging, drapery, pipes, cables, connectors, safety mats.</div>
+									Staging, drapery, pipes, cables, connectors, safety mats.
+								</div>
 							</div>
 							<ul class="project-gallery" >
 								<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-graphic" >
