--- a/index.html
+++ b/index.html
@@ -144,113 +144,115 @@
 				</div>
 				<div class="clearfix"></div>
 			</div>
-			<!-- /.JSSOR Slider etc. -->
+			<!-- End JSSOR Slider -->
 		</div>
-		<!-- /.welcome -->
-		<div id="about" class="welcome">
-			<div class="container">
-				<div class="slogan text-center">
-					<span class="txt_darkgrey">Welcome to </span><span class="txt_orange">Seattle AV Source</span>
-					<p class="txt_slogan">
-						<i style="font-size: 16px;">Seattle's premier supplier for rentals of projection, lighting, video, audio, staging and drapery equipment</i>
-					</p>
-					<div class="content-section">
-						<div class="container">
-							<div class="row">
-								<div class="col-md-12 col-sm-6">
-									<div class="service-item">
-										<p style="font-size: 18px ;">
-											Seattle Audio-Video Source is a cooperation of Data/ Video Projection, Lighting,
-											Sound and AV Labor Specialists in the Audio-Video Industry. Doug Kennelly went
-											in business for himself April 15th, 1980 and throughout the years, Doug Kennelly
-											has worked with many business owners and the idea of creating this co-operative
-											was established to provide our clients with the best in Services, Equipment
-											and discounted AV Rental Pricing.
-										</p>
-
-									</div>
-									<!-- /.service-item -->
-								</div>
-
-								<!-- /.col-md-3 -->
-							</div>
-							<!-- /.row -->
+		
+		<!-- Start Welcome -->
+		<div id="about" >
+			<div class="welcome">
+				<div class="container">
+					<div class="slogan text-center">
+						<span class="txt_darkgrey">Welcome to </span><span class="txt_orange">Seattle AV Source</span>
+						<div class="txt_slogan">
+							<i style="font-size: 16px;">Seattle's premier supplier for rentals of projection, lighting, video, audio, staging and drapery equipment</i>
 						</div>
-						<!-- /.container -->
-					</div>
+						<div class="content-section">
+							<div class="container">
+								<div class="row">
+									<div class="col-md-12 col-sm-6">
+										<div class="service-item">
+											<p style="font-size: 18px ;">
+												Seattle Audio-Video Source is a cooperation of Data/ Video Projection, Lighting,
+												Sound and AV Labor Specialists in the Audio-Video Industry. Doug Kennelly went
+												in business for himself April 15th, 1980 and throughout the years, Doug Kennelly
+												has worked with many business owners and the idea of creating this co-operative
+												was established to provide our clients with the best in Services, Equipment
+												and discounted AV Rental Pricing.
+											</p>
 
-					<!-- /.services -->
-					<div id="services" class="content-section">
-						<div class="container" style="font-size: 16px;">
-							<div class="row">
-								<!-- /.col-md-3 -->
-								<div class="col-md-3 col-sm-6">
-									<div class="service-item">
-										<h2>Data Projection</h2>
-										<p>
-											Have data projection requirements? SeattleAVS has you covered. From short throw at the end of a conference table to scaffolding mounted projection for a convention with 500 people, we have the projectors, screens, cables, connectivity and knowledgable technicians to do the job right the first time.
-										</p>
+										</div>
+										<!-- /.service-item -->
 									</div>
-									<!-- /.service-item -->
-								</div>
 
-								<!-- /.col-md-3 -->
-								<div class="col-md-3 col-sm-6">
-									<div class="service-item">
-										<span class="service-icon second"></span>
-										<h2>Lighting</h2>
-										<p>
-											We are experienced at creating the right mood for your environment. Whether you need ambient back lighting for an auction or stage lighting for a concert, we have the design skills, equipment and manpower to expertly serve your needs.
-										</p>
-									</div>
-									<!-- /.service-item -->
+									<!-- /.col-md-3 -->
 								</div>
-								<!-- /.col-md-3 -->
-								<div class="col-md-3 col-sm-6">
-									<div class="service-item">
-										<span class="service-icon third"></span>
-										<h2>Audio</h2>
-										<p>
-											We have a full line of custom professional sound reinforcement solutions from small public address systems to full size sound systems for auctions, concerts, conferences and conventions.
-										</p>
-									</div>
-									<!-- /.service-item -->
-								</div>
-								<!-- /.col-md-3 -->
-								<div class="col-md-3 col-sm-6">
-									<div class="service-item">
-										<span class="service-icon fourth"></span>
-										<h2>Staging / Drapery</h2>
-										<p>
-											We have staging, drapery and pipe (stands) to make your event look clean, polished and professional. Dress up your auction tables with lighting and drapery for an unforgettable look and feel.
-										</p>
-									</div>
-									<!-- /.service-item -->
-								</div>
-								<!-- /.col-md-3 -->
+								<!-- /.row -->
 							</div>
-							<!-- /.row -->
+							<!-- /.container -->
+						</div>				
+
+						<!-- /.services -->
+						<div id="services" class="content-section">
+							<div class="container" style="font-size: 16px;">
+								<div class="row">
+									<!-- /.col-md-3 -->
+									<div class="col-md-3 col-sm-6">
+										<div class="service-item">
+											<a href="#projectors"><h2>Data Projection</h2></a>
+											<p>
+												Have data projection requirements? SeattleAVS has you covered. From short throw at the end of a conference table to scaffolding mounted projection for a convention with 500 people, we have the projectors, screens, cables, connectivity and knowledgable technicians to do the job right the first time.
+											</p>
+										</div>
+										<!-- /.service-item -->
+									</div>
+
+									<!-- /.col-md-3 -->
+									<div class="col-md-3 col-sm-6">
+										<div class="service-item">
+											<span class="service-icon second"></span>
+											<a href="#lighting"><h2>Lighting</h2></a>
+											<p>
+												We are experienced at creating the right mood for your environment. Whether you need ambient back lighting for an auction or stage lighting for a concert, we have the design skills, equipment and manpower to expertly serve your needs.
+											</p>
+										</div>
+										<!-- /.service-item -->
+									</div>
+									<!-- /.col-md-3 -->
+									<div class="col-md-3 col-sm-6">
+										<div class="service-item">
+											<span class="service-icon third"></span>
+											<a href="#audio"><h2>Audio</h2></a>
+											<p>
+												We have a full line of custom professional sound reinforcement solutions from small public address systems to full size sound systems for auctions, concerts, conferences and conventions.
+											</p>
+										</div>
+										<!-- /.service-item -->
+									</div>
+									<!-- /.col-md-3 -->
+									<div class="col-md-3 col-sm-6">
+										<div class="service-item">
+											<span class="service-icon fourth"></span>
+											<a href="#staging"><h2>Staging / Drapery</h2></a>
+											<p>
+												We have staging, drapery and pipe (stands) to make your event look clean, polished and professional. Dress up your auction tables with lighting and drapery for an unforgettable look and feel.
+											</p>
+										</div>
+										<!-- /.service-item -->
+									</div>
+									<!-- /.col-md-3 -->
+								</div>
+								<!-- /.row -->
+							</div>
+							<!-- /.container -->
 						</div>
-						<!-- /.container -->
+						<!-- /#services -->
 					</div>
-					<!-- /#services -->
 				</div>
 			</div>
-			<div class="clearfix"></div>
 		</div>
+		<!-- End Welcome -->
 
 		<!-- Start Rentals Sales -->
 		<div id="rentals_sales">
 			<div class="container">
 				<div class="row">
-					<div class="line-header" style="margin-top: 0px;" >
+					<div class="line-header" style="margin-top: 50px;" >
 						<div class="text-center">
 							<hr class="team_hr team_hr_left hr_gray"/>
 							<span class="span_rentals_sales txt_darkgrey">RENTALS / SALES</span>
 							<hr class="team_hr team_hr_right hr_gray" />
 						</div>
 					</div>
-					<br class="clearfix"/>
 				</div>
 				<div class="rentals_sales_box">
 					<div class="col-sm-5 col-md-6 rentals_sales_post">
@@ -301,7 +303,7 @@
 					<div class="col-sm-5 col-md-6 rentals_sales_post">
 						<ul class="list-inline">
 							<li class="col-md-4">
-								<a href="#video"> <img class="img-responsive" src="images/rentals_sales-image-2.jpg" alt="gallery 3" /></a>
+								<a href="#video"> <img class="img-responsive" src="images/128.jpg" alt="gallery 3" /></a>
 							</li>
 							<li class="col-md-8">
 								<div class="pull-left">
@@ -322,7 +324,7 @@
 					<div class="col-sm-5 col-md-6 rentals_sales_post">
 						<ul class="list-inline">
 							<li class="col-md-4">
-								<a href="#sstaging"> <img class="img-responsive" src="images/rentals_sales-image-1.jpg"  alt="gallery 4" /> </a>
+								<a href="#staging"> <img class="img-responsive" src="images/127.jpg"  alt="gallery 4" /> </a>
 							</li>
 							<li class="col-md-8">
 								<div class="pull-left">
@@ -357,7 +359,6 @@
 							<hr class="team_hr team_hr_right hr_gray" />
 						</div>
 					</div>
-					<br class="clearfix"/>
 				</div>
 				<div class="text-center">
 					<div class="service-item-header">
@@ -366,60 +367,57 @@
 				</div>
 				<ul class="project-gallery" >
 					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-graphic" >
-						<a class="colorbox" href="images/p1c.jpg" data-group="gallery-graphic">
+						<a class="colorbox" href="images/p1f.jpg" data-group="projectors">
 						<div class="project-box">
 							<img src="images/p1f.jpg" class="img-responsive" alt="gallery" />
 							<div class="project-overlay">
 								<h5>Eiki LC-85</h5>
 								<hr />
-								<h4>7000 ANSI Lumens</h4>
+								<h4>20000 ANSI Lumens. HD 1080p. Long throw, up to 100 feet wide</h4>
 							</div>
 						</div> </a>
 					</li>
 					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-creative" >
-						<a class="colorbox" href="images/p2c.jpg" data-group="gallery-creative">
+						<a class="colorbox" href="images/p2f.jpg" data-group="projectors">
 						<div class="project-box">
 							<img src="images/p2f.jpg" class="img-responsive" alt="gallery" />
 							<div class="project-overlay">
 								<h5>Eiki #LC-XB43</h5>
 								<hr />
-								<h4>4500 ANSI Lumens</h4>
+								<h4>10000 ANSI Lumens. HD 1080p. Long throw up to 45 feet wide.</h4>
 							</div>
 						</div> </a>
 					</li>
 					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-inspiration" >
-						<a class="colorbox" href="images/p3c.jpg" data-group="gallery-inspiration">
+						<a class="colorbox" href="images/p3f.jpg" data-group="projectors">
 						<div class="project-box">
 							<img src="images/p3f.jpg" class="img-responsive" alt="gallery" />
 							<div class="project-overlay">
-								<h5>Inspiration</h5>
+								<h5>Eiki</h5>
 								<hr />
-								<h4>GREEN COLORS</h4>
-							</div>
-							<div class="text-center">
-								Ultra short throw projector
+								<h4>Projector</h4>
 							</div>
 						</div> </a>
 					</li>
 					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-design" >
-						<a class="colorbox" href="images/p5f.jpg" data-group="gallery-design">
+						<a class="colorbox" href="images/p5f.jpg" data-group="projectors">
 						<div class="project-box">
 							<img src="images/p5f.jpg" class="img-responsive" alt="gallery" />
 							<div class="project-overlay">
-								<h5>Web Design</h5>
+								<h5>Eiki</h5>
 								<hr />
-								<h4>CAMERA</h4>
+								<h4>Projector</h4>
 							</div>
 						</div> </a>
 					</li>
 					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-inspiration" >
-						<a class="colorbox" href="images/p4c.jpeg" data-group="gallery-inspiration">
+						<a class="colorbox" href="images/p4f.jpg" data-group="projectors">
 						<div class="project-box">
 							<img src="images/p4f.jpg" class="img-responsive" alt="gallery" />
 							<div class="project-overlay">
-								<h5>Inspiration</h5>
+								<h5>Eiki</h5>
 								<hr />
-								<h4>PLANT</h4>
+								<h4>Projector</h4>
 							</div>
 						</div> </a>
 					</li>
@@ -620,6 +618,82 @@
 		</div>
 		<div class="clearfix"></div>
 		</div>
+		
+		<!-- Staging / Drapery -->
+		<div id="audio">
+			<div class="container">
+				<div class="row">
+					<div class="line-header" style="margin-top: 150px;">
+						<div class="text-center">
+							<hr class="team_hr team_hr_left hr_gray"/>
+							<span class="txt_darkgrey">SOUND SYSTEMS</span>
+							<hr class="team_hr team_hr_right hr_gray" />
+						</div>
+					</div>
+					<br class="clearfix"/>
+				</div>
+
+				<ul class="project-gallery" >
+					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-graphic" >
+						<a class="colorbox" href="images/Dummy.jpg">
+						<div class="project-box">
+							<img src="images/Dummy.jpg" class="img-responsive" alt="gallery" />
+							<div class="project-overlay">
+								<h5>IMAGE</h5>
+								<hr />
+								<h4>PLACE HOLDER</h4>
+							</div>
+						</div> </a>
+					</li>
+					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-creative" >
+						<a class="colorbox" href="images/Dummy.jpg">
+						<div class="project-box">
+							<img src="images/Dummy.jpg" class="img-responsive" alt="gallery" />
+							<div class="project-overlay">
+								<h5>IMAGE</h5>
+								<hr />
+								<h4>PLACE HOLDER</h4>
+							</div>
+						</div> </a>
+					</li>
+					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-inspiration" >
+						<a class="colorbox" href="images/Dummy.jpg">
+						<div class="project-box">
+							<img src="images/Dummy.jpg" class="img-responsive" alt="gallery" />
+							<div class="project-overlay">
+								<h5>IMAGE</h5>
+								<hr />
+								<h4>PLACE HOLDER</h4>
+							</div>
+							<div class="text-center">
+								Ultra short throw projector
+							</div>
+						</div> </a>
+					</li>
+					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-design" >
+						<a class="colorbox" href="images/Dummy.jpg">
+						<div class="project-box">
+							<img src="images/Dummy.jpg" class="img-responsive" alt="gallery" />
+							<div class="project-overlay">
+								<h5>IMAGE</h5>
+								<hr />
+								<h4>PLACE HOLDER</h4>
+							</div>
+						</div> </a>
+					</li>
+					<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-inspiration" >
+						<a class="colorbox" href="images/Dummy.jpeg">
+						<div class="project-box">
+							<img src="images/Dummy.jpg" class="img-responsive" alt="gallery" />
+							<div class="project-overlay">
+								<h5>IMAGE</h5>
+								<hr />
+								<h4>PLACE HOLDER</h4>
+							</div>
+						</div> </a>
+					</li>
+				</ul><!-- /.gallery -->
+			</div>
 
 		<!-- Staging / Drapery -->
 		<div id="staging">
@@ -723,7 +797,6 @@
 					</div>
 					<!-- /.row -->
 
-					<hr class="clearfix">
 					<div class="text-center">
 						<ul class="project-gallery" >
 							<li class="col-lg-2 col-md-2 col-sm-2  gallery gallery-graphic" >
