--- a/index.html
+++ b/index.html
@@ -159,10 +159,10 @@
 						<div class="content-section">
 							<div class="container">
 								<div class="row">
-									<div class="col-md-12 col-sm-6">
+									<div class="col-md-12 col-sm-6">
 										<div class="service-item">
-											<p style="font-size: 18px ;">
-												Seattle Audio-Video Source is a cooperation of Data/ Video Projection, Lighting,
+											<p>
+												Seattle Audio-Video Source is a cooperation of Dat a/ Video Projection, Lighting,
 												Sound and AV Labor Specialists in the Audio-Video Industry. Doug Kennelly went
 												in business for himself April 15th, 1980 and throughout the years, Doug Kennelly
 												has worked with many business owners and the idea of creating this co-operative
@@ -258,7 +258,7 @@
 					<div class="col-sm-5 col-md-6 rentals_sales_post">
 						<ul class="list-inline">
 							<li class="col-md-4">
-								<a href="#projectors"> <img class="img-responsive" src="images/rentals_sales-image-1.jpg" alt="gallery 1" /> </a>
+								<a href="#projectors"> <img class="img-responsive" src="images/rentals_sales-image-1.png" alt="gallery 1" /> </a>
 							</li>
 							<li  class="col-md-8">
 								<div class="pull-left">
@@ -280,7 +280,7 @@
 					<div class="col-sm-5 col-md-6 rentals_sales_post">
 						<ul class="list-inline">
 							<li class="col-md-4">
-								<a href="#lighting"> <img class="img-responsive" src="images/rentals_sales-image-2.jpg" alt="gallery 2" /></a>
+								<a href="#lighting"> <img class="img-responsive" src="images/rentals_sales-image-2.png" alt="gallery 2" /></a>
 							</li>
 							<li class="col-md-8">
 								<div class="pull-left">
@@ -303,7 +303,7 @@
 					<div class="col-sm-5 col-md-6 rentals_sales_post">
 						<ul class="list-inline">
 							<li class="col-md-4">
-								<a href="#video"> <img class="img-responsive" src="images/128.jpg" alt="gallery 3" /></a>
+								<a href="#video"> <img class="img-responsive" src="images/128.png" alt="gallery 3" /></a>
 							</li>
 							<li class="col-md-8">
 								<div class="pull-left">
@@ -324,7 +324,7 @@
 					<div class="col-sm-5 col-md-6 rentals_sales_post">
 						<ul class="list-inline">
 							<li class="col-md-4">
-								<a href="#staging"> <img class="img-responsive" src="images/127.jpg"  alt="gallery 4" /> </a>
+								<a href="#staging"> <img class="img-responsive" src="images/127.png"  alt="gallery 4" /> </a>
 							</li>
 							<li class="col-md-8">
 								<div class="pull-left">
